fix hero overflowing

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -46,6 +46,7 @@ body {
   font-weight: 500;
   line-height: 1.625;
   color: $color-gray;
+  overflow-x: hidden;
 
   @include bp-up(large) {
     font-size: $text-500;
@@ -144,6 +145,7 @@ h3 {
 
 .hero {
   padding-top: 1.375rem;
+  overflow: hidden;
 
   &__content {
     @include bp-up(medium) {
@@ -218,6 +220,7 @@ h3 {
     min-height: 45.4375rem;
     padding-top: 15.75rem;
     padding-right: 0;
+    overflow: unset;
   }
 }
 
